--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,35 @@
- /* 工作区,内容盒子  */
-.contain{
+/* 头部轮播图 */
+.slide-box{
+   position: relative;
+   margin-bottom:20px; 
+   height: 421px;
+}
+
+.slide-imgs a>img{
+    width: 100%;
+}
+.img-detail{
+    top: 8%;
+    left: 10%;
+    font-size: 20px;
+    color: #fff;
+}
+.slide-nav{
+    width: 110px;
+    right: 40px;
+    top: 35px;
+}
+.slide-nav li>img{
+    width: 110px;
+    height: 62px;
+    margin-bottom:4px;
+    border-radius:5px; 
+}
+.slide-nav li>img:hover{
+    transform: scale(1.1);
+}
+/* 工作区,内容盒子  */
+ .contain{
     width: 1000px;
     margin: 0 auto;
 }
@@ -159,68 +189,12 @@
 }
 .right_nav>ul li{
     width:170px;
-    float: left;
-    display: inline;
-    text-align: center;
+    /* float: left; */
+    /* display: inline; */
+    /* text-align: center; */
 }
 .right_nav>ul li:first-child a{
-    font-size: 20px;
+    font-size: 18px;
     color: #ff9d00;
     cursor: pointer;
-}
-.right_menu{
-    display: inline-block;
-    margin-left: 9px;
-    line-height: 21px;
-    color: #fff;
-    font-size: 12px;
-    padding: 0 10px 0 8px;
-    cursor: pointer;
-    vertical-align: 2px;
-    background-color: #ff9d00;
-}
-.right_menu:hover{
-    border-color: #ff9d00;
-    background-color: #ff9d00;
-    color: #fff;
-}
-.menu_icon{
-    float: left;
-    margin: 6px 5px 0 0;
-    width: 11px;
-    height: 8px;
-    background: url(/img/header/index-sprites9.png) no-repeat 0 -130px;
-    background-position: 0 -140px;
-}
-
-.right_nav>ul li:last-child a{
-    font-size: 20px;
-    color: #333;
-    cursor: pointer;
-}
-.right_nav>ul li:last-child a:hover{
-    color: #ff9d00;
-}
-.right_nav_btn{
-    float: right;
-    width: 140px;
-}
-.right_nav_btn a{
-    display: block;
-    height: 36px;
-    background-color: #ff9d00;
-    color: #fff;
-    text-align: center;
-    border-radius: 4px;
-    font-weight: 600;
-}
-.right_nav_btn a i{
-    display: inline-block;
-    margin-right: 5px;
-    width: 18px;
-    height: 17px;
-    background-position: 0 0;
-    overflow: hidden;
-    vertical-align: -3px;
-    background: url(/img/header/index-sprites9.png) no-repeat;
 }
