--- a/css/index.css
+++ b/css/index.css
@@ -224,3 +224,118 @@
     vertical-align: -3px;
     background: url(/img/header/index-sprites9.png) no-repeat;
 }
+.r-item{
+    padding: 15px 0;
+    height: 150px;
+}
+.r-item:hover{
+    background-color: #f8f8f8;
+    padding: 15px;
+    margin: 0 -15px;
+}
+.r-img{
+    width: 220px;
+    height: 150px;
+    position: relative;
+}
+.r-wrapper{
+    float: right;
+    width: 455px;
+    height: 150px;
+}
+.r-wrapper>div:first-child{
+    height:117px;
+}
+.r-wrapper p:first-child{
+    height: 26px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 26px;
+}
+.r-wrapper p:first-child>a{
+    width: 420px;
+    height: 26px;
+    display: block;
+    color: #333;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.r-wrapper p>a{
+    width: 420px;
+    height: 26px;
+    color: #333;
+    overflow: hidden;
+}
+.r-wrapper p:nth-child(2){
+    line-height: 20px;
+    font-size: 14px;
+    overflow: hidden;
+}
+.r-wrapper p:nth-child(2)>a{
+    color: #666;
+}
+.r_button{
+    height: 33px;
+    overflow: hidden;
+    line-height: 33px;
+}
+.r_button span{
+    display: inline-block;
+    margin-right: 5px;
+}
+.r_ding{
+        float: right;
+        color: #ff9d00;
+        font-size: 14px;
+        text-align: right;
+}
+.btn_ding{
+    display: inline-block;
+    float: right;
+    margin-left: 8px;
+    width: 38px;
+    height: 33px;
+    background-position: -60px 0!important;
+    overflow: hidden;
+    background: url(/img/index/index-sprites9.png) no-repeat;
+}
+.r_place i {
+    float: left;
+    margin: 8px 5px 0 0;
+    width: 14px;
+    height: 16px;
+    background-position: 0 -50px!important;
+    overflow: hidden;
+    background: url(/img/index/index-sprites9.png) no-repeat;
+}
+.r_place  a{
+    color:#666;
+}
+.r_user{
+    margin-right: 10px;
+}
+.r_user img {
+    margin-right: 5px;
+    width: 16px;
+    height: 16px;
+    overflow: hidden;
+    border-radius: 50%;
+    vertical-align: -3px;
+}
+.r_user  a{
+    color:#666;
+}
+.r_nums {
+    font-size: 14px;
+    color: #999;
+}
+.r_nums i {
+    float: left;
+    margin: 10px 5px 0 0;
+    width: 18px;
+    height: 14px;
+    background-position: -30px -50px!important;
+    background: url(/img/index/index-sprites9.png) no-repeat;
+}
