--- a/page/view/destination.html
+++ b/page/view/destination.html
@@ -10,5 +10,25 @@
 </head>
 <body>
     
+    <!-- ajax接入 头部标题栏 -->
+    <!-- <header>
+        <iframe src="page/header/header.html" frameborder="0" width="100%" height="58px" scrolling="no"></iframe>
+    </header> -->
+
+
+
+    <!-- 项目书写地方 -->
+
+
+
+
+    <!-- ajax接入 html低部 -->
+    <!-- <footer>
+        <iframe src="page/footer/footer.html" frameborder="0" width="100%" height="654px" scrolling="no"></iframe>
+    </footer> -->
+
+
+
+
 </body>
 </html>
